# player

./: .gitignore  .vscode-ctags  CMakeLists-debug.txt  CMakeLists-publish.txt  CMakeLists.txt  DeviceVideo.md  Image.md  README.md  aarch64-toolchain.cmake  toolchain.cmake.bak  vcpkg-configuration.json  vcpkg.json  配置交叉编译链.md
.github/workflows/: cmake-multi-platform.yml
include/: Framebuffer.h  GStreamerImage.h  GStreamerPlayer.h  GstConcatPlayer.h  GstPlayer.h  ImageDecoder.h  QrCodeGenerator.h  TextRenderer.h  Tools.h  control.h  daemon_thread.h  display.h  downloader.h  http_client.h  logger.h  mqtt_client.h  stb_truetype.h  task_repository.h
player/: CMakeLists.txt  GStreamerPlayer.cpp  GStreamerPlayer.h  player.cpp  player.h
src/: Framebuffer.cpp  GStreamerImage.cpp  GStreamerPlayer.cpp  GstConcatPlayer.cpp  GstPlayer.cpp  ImageDecoder.cpp  QrCodeGenerator.cpp  TextRenderer.cpp  Tools.cpp  UdpSocketHelper.cpp  control.cpp  daemon_thread.cpp  display.cpp  downloader.cpp  http_client.cpp  main.cpp  mqtt_client.cpp  stb_init.cpp  task_repository.cpp
